--- a/paper/egbib.bib
+++ b/paper/egbib.bib
@@ -206,6 +206,15 @@ archivePrefix = {arXiv},
 primaryClass = {cs.CL}
 }
 
+@article{crosslanguage,
+    author = {author},
+    title = {Cross-Lingual Transfer Learning for Multilingual Task Oriented Dialog},
+    year = {2019},
+    eprint = {1810.13327},
+    archivePrefix = {arXiv},
+    primaryClass = {cs.CL}
+}
+
 @misc{dauphin2017language,
       title={Language Modeling with Gated Convolutional Networks},
       author={Yann N. Dauphin and Angela Fan and Michael Auli and David Grangier},
@@ -214,3 +223,4 @@ primaryClass = {cs.CL}
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
+
