--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -30,7 +30,7 @@
 \begin{document}
 
 %%%%%%%%% TITLE
-\title{Improving BERT text generation with an attention sampling method}
+\title{Improving BERT text generation with an Attention sampling method}
 
 \author{First Author\\
 Institution1\\
@@ -95,14 +95,14 @@ mechanism.
 
 In recent years, the field of Natural Language Generation (NLG) has expanded its repertoire
 of solutions for text generation to include a variety of methods.
-Models such as RNN's, Bi-LSTM, Transformers-based models (e.g.\ GPT), GAN's, among others, have evolved
+Models such as RNN's, Bi-LSTM, Transformers-based models (e.g., GPT), GAN's, among others, have evolved
 to produce elaborate pieces of text for different specifics tasks.
 Each method proposes a different approach to the task at hand.
 
 \subsection{RNN}
 
 Recurrent Neural Networks (RNN) are commonly used in sequence-to-sequence (seq2seq) tasks, such as text generation.
-Simple RNN's have been adapted to overcome its own limitations, e.g.\ vanishing or exploding gradients,
+Simple RNN's have been adapted to overcome its own limitations, e.g., vanishing or exploding gradients,
 introducing concepts such as Long Short Term Memory networks (LSTM) or even bidirectional LSTM's (Bi-LSTM).
 LSTM's and Bi-LSTM have been used in many cases for text generation \cite{Bengali} \cite{lstm1} \cite{lstm2} \cite{lstm3}.
 These models are still used in recent years.
@@ -145,9 +145,9 @@ Some authors \cite{wang2019bert} have proposed workarounds to BERT limitations f
 \section{BertTextGenerator}
 BERT is a language representation model designed to achieve state-of-art results
 in several natural language processing tasks such as question answering and language inference.
-BERT is trained on masked language modeling objective, in which it predicts a word given its
+BERT is trained on masked language modelling objective, in which it predicts a word given its
 left and right context.
-Given this behavior, it is possible to deduct that BERT is not the most
+Given this behaviour, it is possible to deduct that BERT is not the most
 indicated model for text generation tasks.
 However, \cite{wang2019bert} have demonstrated why it is possible to use BERT as a traditional
 language model by means of showing that BERT is a combination of a 'Markov random field
@@ -159,7 +159,7 @@ To generate text with BERT the process is composed by 3 main steps described as 
 
 \begin{itemize}
 \item Initialization: It is necessary to initialize the sequence with a random initial state, this can be either an all-mask sequence,
-i.e.([MASK], ...,[MASK]), an all-random sequence, or a combination of these, i.e. (50\% [MASK] tokens and 50\% random tokens).
+i.e., [MASK], ..., [MASK], an all-random sequence, or a combination of these, i.e. 50\% [MASK] tokens and 50\% random tokens.
 \item Sampling: At each iteration, it is necessary to choose which token of the sequence will be masked, in \cite{wang2019bert}
 they propose the Sequential sampling in which the sequence is masked from left to right one token at a time at each iteration,
 and the Parallel sequential sampling in which the sequence is masked choosing at random one token at each iteration.
@@ -189,7 +189,7 @@ For example, take the sentence "the animal didn't cross the street because it wa
 as a human it is easy to know that in the sentence the pronoun "it" refers to the subject "the animal"
 and the verb "was" is the correct conjugation of the verb "To be" for the third person, but for an
 algorithm is not easy to know these relationships and that is the task of the attention mechanism.
-Taking into account the same sentence
+Considering the same sentence
 some attention heads would focus on the verb "was", other attention heads would focus
 on the special tokens "[CLS]" and "[SEP]" that represent the beginning and the end of the sentence
 respectively, finally other attention heads would focus on the word "animal". In this way BERT can
@@ -214,13 +214,13 @@ that was already replaced to check if these tokens preserve his meaning in the s
 However, we found that the attention mechanism creates very strong correlations between
 few tokens of the sequence, then the sample got stuck always choosing the same tokens among
 all the iterations.
-To solve this behavior, we add a penalization to those tokens that were
+To solve this behaviour, we add a penalization to those tokens that were
 chosen several times, in the next section we describe the new method.
 
 \begin{figure}
    \centering
    \includegraphics[scale=0.7]{attComp.PNG}
-   \caption{Comparison of the behavior of the proposed sampling methods.}
+   \caption{Comparison of the behaviour of the proposed sampling methods.}
    \label{fig:AttentComp}
 \end{figure}
 
@@ -244,12 +244,12 @@ during the iterations, it is possible to note how the attention method
 get stuck during several iterations in the same areas of the sequence, for example, during the iterations
 10 to 16, the probability was focus on the last 4 tokens of the sequence.
 While in the penalized attention is possible to see a more balance probability distribution inside each iteration
-and the sampling method is not focus in only few parts of the sequence.
+and the sampling method is not focus on only few parts of the sequence.
 %------------------------------------------------------------------------
 \subsection{Finetuning}
 BERT is a powerful model pre-trained on a broad set of text composed by the whole
 BooksCorpus and Wikipedia corpora \cite{wang2019bert}.
-One of its main feature is its adaptability to a plethora of different tasks,
+One of its main features is its adaptability to a plethora of different tasks,
 by means of a fine-tuning on specific domain set.
 Typical fine-tuning techniques depend on the final task that the user requires BERT to perform.
 For example, considering classification tasks such as sentiment prediction and text classification,
@@ -261,13 +261,13 @@ In this case, the fine-tuning aims to make the model understand the structure of
 in order to mimic it at inference time.
 We have implemented a fine-tuning procedure that relies on a \textit{Cloze} task, similar to the one adopted also in the
  original training \cite{bert}.
-This consists on replacing a percentage (15\% by default) of the tokens for each sentence with a [MASK] token and let
+This consists of replacing a percentage (15\% by default) of the tokens for each sentence with a [MASK] token and let
 BERT predict the blanks. The logits outputted by the model are then used to compute the cross-entropy
 loss with respect to the original token that were replaced.
 
 This method allows the final user to start from a pretrained model and fine-tune it on a specific
 text corpus in order then to make it generate text similar to the original one.
-This approach also works  in the case that a pretrained model is not available in th language selected by the user.
+This approach also works in the case that a pretrained model is not available in the language selected by the user.
 In this case, the user can simply start from a Multilingual Models and applying a process referred to as 
 Cross-Lingual Transfer Learning\cite{crosslanguage}.
 
@@ -281,15 +281,15 @@ We have extended this idea in order to comprehend also tokens that define the st
 Note that, simply adding these tokens to the vocabulary would have no effect.
 These tokens in fact, are typically replaced even before the tokenization, during the normalization step of the tokenization pipeline.
 
-However, these tokens can be really important, especially in the task of text generation.
-To solve this problem we have implemented a Formatter class that helps the user to format the text in order
+However, these tokens can be fundamental, especially in the task of text generation.
+To solve this problem, we have implemented a Formatter class that helps the user to format the text in order
 to preserve the important tokens.
-The Formatter replaces a user specified set of tokens that need to be preserved, with some unused-tokens.
+The Formatter replaces a user specified set of tokens that need to be preserved, with some unused tokens.
 The replacement happens before the tokenization, in this manner, during the fine-tuning the model will be able to learn
 the position of these important tokens.
 The unused tokens are then replaced back with the original ones after the generation.
 
-Using this method we were able to fine-tune a model able to learn the famous tercet structure of Dante's Divine Comedy.
+Using this method, we were able to fine-tune a model able to learn the famous tercet structure of Dante's Divine Comedy.
 
 \subsubsection{Sentiment generation}
 \label{sentiment}
@@ -314,7 +314,7 @@ a context on top of which BERT can start to generate.
 $$\big[     \text{[CLS]}\quad\underbrace{ \;\; \text{[pos-1]} \;\; \text{[pos-2]} \;\; \text{[pos-3]}}_{seed}
       \quad      \text{[MASK]} \quad\text{[MASK]}\quad\ldots$$
 
-This method, even in its simplicity, showed its efficacy in generating positive and negative italian tweets about football.
+This method, even in its simplicity, showed its efficacy in generating positive and negative Italian tweets about football.
 In addition, this method will allow the possibility to consider even more than two labels.
 %------------------------------------------------------------------------
 \begin{table}
@@ -365,7 +365,7 @@ The evaluation of generated text is not a simple task.
 Some evaluations rely on intrinsic or extrinsic techniques.
 Within these techniques metrics such as n-gram overlap metrics (f-score, bleu, self-bleu, rouge, meteor),
 distance-based metrics, diversity metrics, content overlap metrics or even grammatical feature based
-are taken into account.
+are considered.
 Each metric reflects different results.
 For example, the self-bleu represents the diversity of the text \cite{texygen}.
 But this metrics are not perfect and can also be deceived.
@@ -379,16 +379,16 @@ In this sense, it is not simple to evaluate a text generator model based on a si
 % Corpus Bleu, perplexity and rouge
 % Self-Bleu and n-Grams
 
-We have made a Grid Search to analyze the behavior of the generations and to identify the best combination of parameters for each one of the sampling methods.
+We have made a Grid Search to analyse the behaviour of the generations and to identify the best combination of parameters for each one of the sampling methods.
 For each one of the different combinations of parameters we have made five different generations each one with 50 text lines,
-then we calculated different measures to analyze the quality and the diversity of the generations like
-Bleu on Wikitex-103 (WT103) and TBC using the Texygen library \cite{texygen}, rouge and \%Unique-Ngrams. We select the three best models for each
+then we calculated different measures to analyse the quality and the diversity of the generations like
+Bleu on Wikitex-103 (WT103) and TBC using the Texygen library \cite{texygen}, rouge and \%Unique N-grams. We select the three best models for each
 generation method. Finally, we generated 1000 text lines with each one
 of the selected models, we evaluate the final generations and based on the results we choose the best combination of
 parameters for each generation method, in table \ref{tab:parameters} we report the obtained results.
 
 In table \ref{tab:parameters}, we report the Bleu scores with respect to WT103 and TBC for the best models we found,
-the results reported on \cite{wang2019bert} and its corresponding using TexiGen as evaluator, and our RNN trained on WT103.5 and TBC.
+the results reported on \cite{wang2019bert} and its corresponding using Texygen as evaluator, and our RNN trained on WT103.5 and TBC.
 It is possible to note that the proposed attention method is very near of the base line marked by \cite{wang2019bert},
 even outperforming the base line in the Bleu measure with respect to WT103.
 
@@ -396,14 +396,14 @@ even outperforming the base line in the Bleu measure with respect to WT103.
 %---------------------------------------------------------------------------------------------
 \subsection{Convergence of the attention sampling method}
 As showed in \ref{tab:results}, the penalized attention method required less than a half
-of the iterations with respect to the other methods,to reach similar results.
-To analyse further this behavior, we have made an experiment measuring the average number
+of the iterations with respect to the other methods, to reach similar results.
+To analyse further this behaviour, we have made an experiment measuring the average number
 of iterations needed to replace all the starting [MASK] tokens \ref{fig:ReplaceMask}.
-This is an indicator of the speed at which the method is able to create a context for the sentence.
+This is an indicator of the speed at which the method can create a context for the sentence.
 The parallel and the vanilla attention methods, required in average more than 80 over 150 iterations.
 This means that the model had less than 70 remaining iterations to try to replace tokens with a complete sentence.
 Moreover, they showed a very high variability.
-On the other hand the penalized attention method showed a much faster replacement with a lower variability.
+On the other hand, the penalized attention method showed a much faster replacement with a lower variability.
 
 \begin{figure}[t!]
    \centering
@@ -414,7 +414,7 @@ On the other hand the penalized attention method showed a much faster replacemen
    \label{fig:ReplaceMask}
 \end{figure}
 
-This behavior reflects on a faster convergence of this method.
+This behaviour reflects on a faster convergence of this method.
 In \ref{fig:Recall} we have plotted the average recall score for unigrams and bigrams during the iterations.
 All the methods were reaching a similar plateau, with a drastic change of slope in correspondence of the
 average number of iterations needed to replace the masked tokens. The penalized attention mechanism was clearly the
@@ -432,13 +432,13 @@ one able to reach it faster.
 \subsection{Italian generation: finetuning experiments}
 In order to test the functionality of the fine-tuning we have performed three experiments
 \footnote[1]{https://github.com/JuanJoseMV/neuraltextgen/blob/main/Example\_finetuning.ipynb}.
-All the experiments were performed with an italian pretrained BERT model
+All the experiments were performed with an Italian pretrained BERT model
 \footnote[2]{https://huggingface.co/dbmdz/bert-base-italian-cased}
 applied on Italian sets of text.
 All the fine-tunings use the AdamW optimizer with linear schedule with warmup, as common use for finetuning transformer methods.
 
 \paragraph{Motivational quotes} In the first experiment we have gathered a small set of motivational quotes,
-constructed scraping from different sources. The quotes were preprocessed in order to make them
+constructed scraping from different sources. The quotes were pre-processed in order to make them
 all structured in the same way:
 \begin{quote}
    A motivational quote - (anonymous)
@@ -456,7 +456,7 @@ non hai nulla da fare, tutti i giorni, se non stai cercando di fare tutto cio ch
 %   se vuoi davvero fare una cosa, e meglio se la smetti di farla. ( thomas edison )
 %\end{quote}
 Obviously not all the quotes were this good.
-A lot of generation were stucked on repetitions of the same words or tokens.
+A lot of generations were stuck on repetitions of the same words or tokens.
 This is a common problem that we have found on all the generations with BERT that we have done.
 The sampling methods that outputted the most reliable quotes seemed to be the penalized attention and the sequential.
 
@@ -469,8 +469,8 @@ The model was fine-tuned on tercets (groups of three lines) instead of single li
    mi ritrovai per una selva oscura,\\
    ché la diritta via era smarrita.\\
 \end{quote}
-Each tercet was preprocessed replacing '\textbackslash n' with 'unused1' tokens as explained in \ref{section:structureText}.
-Also in this case the model was finetuned for 4 epochs with starting $lr=5e^{-5}$. These are 2 tercets generated:
+Each tercet was pre-processed replacing '\textbackslash n' with 'unused1' tokens as explained in \ref{section:structureText}.
+Also in this case, the model was finetuned for 4 epochs with starting $lr=5e^{-5}$. These are 2 tercets generated:
 %\begin{quote} %['Nel', 'mezzo', 'del', 'cammin', 'di', 'nostra', 'vita', \textbf{'unused1'}, % 'mi', % 'ritrovai', % 'per', \ldots%% 'una',%% 'selva',
 %% 'oscura,', %% \textbf{'unused1'}, %% 'ché',%% 'la',%% 'diritta',%% 'via',%% 'era',%% 'smarrita.',%% \textbf{'unused1'}]%\end{quote}
 
@@ -521,15 +521,14 @@ Also in this case the attention sampling method seemed the one able to reproduce
 
 
 \paragraph{Sentiment generation} In this case we have used a dataset
-composed by 12000 italian tweets extracted from
+composed by 12000 Italian tweets extracted from
 \footnote[1]{https://github.com/charlesmalafosse/open-dataset-for-sentiment-analysis}.
-Each tweet with one of 4 possible sentimen labels
+Each tweet with one of 4 possible sentiment labels
 $\mathcal Y = \{\text{POSITIVE}, \text{NEGATIVE}, \text{MIXED}, \text{NEUTRAL}\}$.
 The dataset was highly imbalanced with respect to the last two classes, so we have considered only the first two
 selecting 6000 tweets for each one.
-The dataset was preprocessed as explained in \ref{sentiment}; in addition a set of tokens was added to the vocabulary
-in order to deal with '@tags' and '#hashtags'. We have generated new tweets, setting [POSITIVE]/[NEGATIVE] + "Ronaldo"
-as starting seed:\\
+The dataset was pre-processed as explained in \ref{sentiment}; in addition, a set of tokens was added to the vocabulary
+in order to deal with '@tags' and '#hashtags'. We have generated new tweets, setting [POSITIVE]/[NEGATIVE] + "Ronaldo", as starting seed:\\
 
 [POSITIVE]:
 \begin{quote}
@@ -554,18 +553,18 @@ showed the unreliability of BERT in text generation,
 due to incapacity of controlling it.
 In particular, a typical problem that we have encountered was that in
 a considerable number of iterations the model was stuck in a bad part of the
-configuration space i.e. all '.' tokens or repetition of groups of tokens.
+configuration space i.e., all '.' tokens or repetition of groups of tokens.
 The consequence was that BERT was keeping replacing the tokens with the same ones
 until the last iteration.
 
 Nonetheless, our experiments showed the possibility to still apply the model
-on specific domains i.e quotes, through a fine-tuning.
+on specific domains i.e, quotes, through a fine-tuning.
 In this case, BERT were able to clearly understand
 the structure and generate some meaningful text.
 
 Due to high variability of the results, we can conclude that no sampling method was clearly
 outperforming the others. This suggests the possibility of future exploration in other parts
-of the generation method. In particular it could be interesting a further investigation
+of the generation method. In particular, it could be interesting a further investigation
 of the resampling part and the implementation of a scheduling of the temperature of the logits,
 in order to help the generation method to not get stuck in the early stages of the generation.
 
