--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -32,10 +32,10 @@
 %%%%%%%%% TITLE
 \title{Improving BERT text generation with an Attention sampling method}
 
-\author{First Author\\
-Institution1\\
-Institution1 address\\
-{\tt\small firstauthor@i1.org}
+\author{Juan José Márquez Villacís\\
+Politecnico di Torino\\
+s287313
+{\tt\small juanjose.marquezvillacis@studenti.polito.it}
 % For a paper whose authors are all at the same institution,
 % omit the following lines up until the closing ``}''.
 % Additional authors and addresses can be added with ``\and'',
@@ -69,7 +69,7 @@ our contributions.
 In recent years, the field of text generation has become an ever-growing interest
 with the advent of new methods for generating text. Pre-trained language models
 such as BERT have been used for a variety of NLP tasks. Taking advantage of BERT’s
-MML task, [] has proposed to use BERT as a text generator. In this project,
+MML task, \cite{wang2019bert} has proposed to use BERT as a text generator. In this project,
 we analyse the ways in which BERT can generate sentences by taking advantage of its
 architecture. Firstly, we describe three steps for the generation process: initialization,
 sampling and replacement. Within this process we propose a different approach for the
@@ -87,7 +87,7 @@ the training phase so that it can generate text according to a specified sentime
 
 The evaluation of machine generate text is a complicated task, having different metrics
 to represent the goodness of the writing. In this work, we compare the results of the Bleu
-score with the results of [] and discuss the efficiency of the introduced attention
+score with the results of \cite{wang2019bert} and discuss the efficiency of the introduced attention
 mechanism.
 
 %-------------------------------------------------------------------------
