--- a/paper/egpaper_final.tex
+++ b/paper/egpaper_final.tex
@@ -32,20 +32,20 @@
 %%%%%%%%% TITLE
 \title{Improving BERT text generation with an Attention sampling method}
 
-\author{Juan José Márquez Villacís\\
-Politecnico di Torino\\
-s287313
-{\tt\small juanjose.marquezvillacis@studenti.polito.it}
-% For a paper whose authors are all at the same institution,
-% omit the following lines up until the closing ``}''.
-% Additional authors and addresses can be added with ``\and'',
-% just like the second author.
-% To save space, use either the email address or home page, not both
+\author{\IEEEauthorblockN{ Juan Jose \\ Marquez Villacís}\\
+\IEEEauthorblockA{
+Politecnico di Torino \\
+S287313@studenti.polito.it}
 \and
-Second Author\\
-Institution2\\
-First line of institution2 address\\
-{\tt\small secondauthor@i2.org}
+\IEEEauthorblockN{Fabio Caffaro}\\
+\IEEEauthorblockA{
+Politecnico di Torino \\
+S276842@studenti.polito.it}
+\and
+\IEEEauthorblockN{Yhorman Bedoya}\\
+\IEEEauthorblockA{
+Politecnico di Torino \\
+S287296@studenti.polito.it}
 }
 
 \maketitle
